--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "axios": "^1.5.0",
     "basiclightbox": "^5.0.4",
+    "lodash.debounce": "^4.0.8",
     "notiflix": "^3.2.6",
     "slim-select": "^2.6.0",
     "swiper": "^10.2.0",
